--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,9 @@
-td {
-  height: 20vh;
-  width: 20vh;
-  border: 3px solid black;
-  text-align: center;
-  font-size: 4rem;
-}
-
-table {
-  border: 3px solid black;
+body {
+  background-color: #f6f4f3;
 }
 
 main {
-  font-family: Inter, sans-serif;
-  font-weight: 700;
-  font-size: 1.3rem;
+  font-family: "Garamond";
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,84 +13,40 @@ main {
   height: 100vh;
 }
 
-#formDiv {
-  display: flex;
-  flex-direction: row;
-  width: 60vh;
-  height: 20vh;
+.board {
+  display: grid;
+  grid-template-columns: repeat(3, 20vh);
+  grid-template-rows: repeat(3, 20vh);
+  gap: 5px;
   margin: 10px;
+  width: calc(60vh + 10px);
+  border: solid #183059 5px;
 }
-form {
-  gap: 10px;
+
+.quad {
+  cursor: pointer;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
+  background-color: #276fbf;
+  font-weight: 700;
+  font-size: 5rem;
+  display: flex;
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 15px;
 }
 
 button {
-  width: 15vh;
-}
-
-/* CSS */
-.button-79 {
-  text-align: center;
-  backface-visibility: hidden;
-  background: #332cf2;
-  border: 0;
-  border-radius: 0.375rem;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Circular, Helvetica, sans-serif;
-  font-size: 1rem;
   font-weight: 700;
-  letter-spacing: -0.01em;
-  line-height: 1;
-  padding: 1rem 1rem;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transform: translateZ(0) scale(1);
-  transition: transform 0.2s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-79:disabled {
-  color: #787878;
-  cursor: auto;
-}
-
-.button-79:not(:disabled):hover {
-  transform: scale(1.05);
-}
-
-.button-79:not(:disabled):hover:active {
-  transform: scale(1.05) translateY(0.125rem);
-}
-
-.button-79:focus {
-  outline: 0 solid transparent;
-}
-
-.button-79:focus:before {
-  border-width: 0.125rem;
-  content: "";
-  left: calc(-1 * 0.375rem);
-  pointer-events: none;
-  position: absolute;
-  top: calc(-1 * 0.375rem);
-  transition: border-radius;
-  user-select: none;
-}
-
-.button-79:focus:not(:focus-visible) {
-  outline: 0 solid transparent;
-}
-
-.button-79:not(:disabled):active {
-  transform: translateY(0.125rem);
+  font-family: "Garamond";
+  margin-bottom: 15px;
+  border: 3px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 1.2rem;
+  background-color: #f03a47;
+  width: 25vh;
 }
