--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,12 @@ body {
 }
 
 main {
-  font-family: "Garamond";
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: auto;
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
 }
 
@@ -49,4 +48,20 @@ button {
   font-size: 1.2rem;
   background-color: #f03a47;
   width: 25vh;
+}
+
+@media only screen and (max-width: 700px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  .board {
+    grid-template-columns: repeat(3, 20vw);
+    grid-template-rows: repeat(3, 20vw);
+    width: calc(60vw + 10px);
+  }
+
+  button {
+    color: black;
+  }
 }
