--- a/src/App.css
+++ b/src/App.css
@@ -56,12 +56,19 @@ main {
   display: flex;
 }
 
+.inputDiv {
+  display: "flex";
+  flex-direction: "column";
+  align-items: "center";
+  justify-content: "center";
+}
+
 h1 {
   font-size: 2rem;
   margin-bottom: 15px;
 }
 
-button {
+.but {
   font-weight: 700;
   font-family: "Garamond";
   margin-bottom: 15px;
